// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly primary button 1`] = `
<button
  className="Button Button-primary"
>
  Primary Button
</button>
`;

exports[`renders correctly secondary button 1`] = `
<button
  className="Button Button-secondary"
>
  Secondary Button
</button>
`;
